# Apex-Trading

./: .gitignore  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
backend/api/: auth.py  market_data.py  orders.py  portfolio.py  positions.py  scanners.py  signals.py  strategies.py  workspaces.py
backend/core/: config.py  events.py  security.py
backend/schemas/: auth.py  market_data.py  orders.py  positions.py  scanners.py  strategies.py
backend/services/: ai_signals.py  backtester.py  data_streamer.py  execution_engine.py  scanner.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/: BacktestResults.tsx  GreeksChart.tsx  PositionsList.tsx  StrategyBuilder.tsx  TimeAndSales.tsx  VolatilitySurface.tsx
frontend/src/lib/: api.ts  websocket.ts
frontend/src/lib/store/: authStore.ts
frontend/src/pages/: MainLayout.tsx  Portfolio.tsx  TradingDashboard.tsx
scripts/: stream_live_data.py
